[package]
name = "yoda-calculator"
version = "0.1.0"
edition = "2021"
description = "This is a simple command line app that acts as a scientific calculator, operating through commands instead of buttons."
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
num-traits = "0.2.19"
argparse = "0.2.2"
